[tool.poetry]
name = "contacts_api"
version = "1.0"
description = "test"
authors = ["Alexander Belozerov <asbelozerov@sbercloud.ru>"]
license = "FREE"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pydantic = "^1.9.0"
Flask-Pydantic = "^0.9.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
